# jorts

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  io.github.ellie_commons.jorts.flathub.yml  io.github.ellie_commons.jorts.yml  io.github.elly_code.jorts.devel.yml  io.github.elly_code.jorts.flathub.yml  io.github.elly_code.jorts.yml  io.github.elly_codes.jorts.flathub.yml  io.github.elly_codes.jorts.yml  meson.build  meson.options  meson_options.txt  sqgipkg.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: CI.yml  create_win_installer.yml  lint.yml  on_release.yml  release.yml
build-aux/: pixiewood.xml
data/: Application.css  Themes.css  jorts.desktop.in  jorts.desktop.in.in  jorts.gresource.xml  jorts.gresource.xml.in  jorts.gschema.xml  jorts.gschema.xml.in  jorts.metainfo.xml.in  jorts.metainfo.xml.in.in  meson.build  stylesheets.sh
data/fonts/: fontconfig.sh  meson.build
data/icons/: meson.build
docs/: backstory.md  buildsystem.md  choices.md  gallery.md  packagings.md  thanks.md  windows.md
docs/development/: building.md  downstream.md  flatpak.md  packagings.md  porting.md  windows.md
po/: LINGUAS  POTFILES  README.md  bn.po  cs.po  da.po  de.po  el.po  es.po  fi.po  fil.po  fr.po  hi.po  hr.po  io.github.ellie_commons.jorts.pot  io.github.elly_code.jorts.pot  io.github.elly_codes.jorts.pot  it.po  ja.po  jorts.pot  lt.po  meson.build  nb.po  nl.po  no.po  pl.po  pt.po  pt_br.po  ru.po  sk.po  sv.po  tr.po  uk.po  vi.po  zh.po
po/extra/: POTFILES  bn.po  cs.po  da.po  de.po  el.po  es.po  extra.pot  fi.po  fil.po  fr.po  hi.po  hr.po  it.po  ja.po  lt.po  meson.build  nb.po  nl.po  no.po  pl.po  pt.po  pt_br.po  ru.po  sk.po  sv.po  tr.po  uk.po  zh.po
src/: Application.vala  Config.vala.in  Constants.vala  main.vala  meson.build
src/Interfaces/: Scribblable.vala  Zoomable.vala
src/Objects/: ListPrefix.vala  NoteData.vala  Themes.vala  Zoom.vala  ZoomType.vala  Zoomkind.vala
src/Services/: ColorController.vala  NoteManager.vala  ScribblyController.vala  Storage.vala  ZoomController.vala
src/Utils/: Libportal.vala  Random.vala
src/Views/: NoteView.vala  PreferencesView.vala
src/Widgets/: ActionBar.vala  EditableLabel.vala  HyperTextView.vala  Popover.vala  TextBuffer.vala  TextView.vala  ZoomedWindow.vala
src/Widgets/PopoverWidgets/: ColorBox.vala  ColorPill.vala  MonospaceBox.vala  ZoomBox.vala
src/Widgets/PreferencesWidgets/: SettingsSwitch.vala
src/Windows/: PreferenceWindow.vala  StickyNoteWindow.vala
subprojects/: granite-stylesheet.wrap  granite.wrap
subprojects/packagefiles/: granite-stylesheet_install_tag.patch  granite_disable_icon_cache.patch  granite_pass_pkg_args_to_valac.patch
tests/: meson.build
windows/: Jorts-Installer.nsi  deploy.sh  deploy.sh.in  installer.nsi.in  meson.build  x86_64-w64-mingw32.txt
