option('variant',
    type : 'combo',
    choices : ['default', 'classic', 'pride', 'halloween', 'devel'],
    value : 'default',
    description : 'The name of the seasonal icon and style to use.'
)
option('development', type: 'boolean', value: false, description: 'If this is a development build')
option('legacy-rdnn', type: 'boolean', value: false, description: 'If this uses the legacy RDNN')