option('icon-variant',
    type : 'combo',
    choices : ['default', 'classic', 'pride', 'halloween', 'devel'],
    value : 'default',
    description : 'The name of the seasonal icon and style to use'
)
option('target_os',
    type : 'combo',
    choices : ['linux', 'windows'],
    value : 'linux',
    description : 'What we build for. Switched on automatically on windows machines, usually'
)
option('development', type: 'boolean', value: false, description: 'If this is a dev build')
option('legacy-rdnn', type: 'boolean', value: false, description: 'If this uses old rdnn')